@@ -1,3 +1,9 @@
+2001-05-23  Pavel Roskin  <proski@gnu.org>
+
+	* aclang.m4 (AC_PROG_CPP): Use `break' instead of `break 2' since
+	_AC_PROG_PREPROC_WORKS_IFELSE expands arguments outside the loop.
+	(AC_PROG_CXXCPP): Likewise.
+
 2001-05-22  Akim Demaille  <akim@epita.fr>
 
 	* config: New directory.
